--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "xyz.dps0340.firestore_visualizer"
+        applicationId "xyz.dps0340.firebase_visualizer"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
